--- a/L07/.project
+++ b/L07/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>L07Operacoes</name>
+	<name>L07</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1650824426780</id>
+			<id>0</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
