reorganiza lista 05 em pacotes

--- a/L05/.project
+++ b/L05/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>L05Q2</name>
+	<name>L05</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1650824426760</id>
+			<id>0</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
